<package format="2">
    <name>nclt_description</name>
    <version>0.1.0</version>
    <description>URDF for the PERL lab's Segway platform.</description>
    <maintainer email="gregjm@umich.edu">Gregory Meyer</maintainer>
    <license>BSD 3-Clause License</license>

    <url type="repository">https://github.com/umigv/nclt_description</url>
    <author>Gregory Meyer</author>

    <buildtool_depend>catkin</buildtool_depend>
</package>
